# PrivateNaNoWriMoServer

./: .gitignore  Cargo.toml  Readme.md
res/: init.sql
res/templates/: index.html.hbs  story.html.hbs  user_home.html.hbs
src/: main.rs
src/pages/: login.rs  misc.rs  mod.rs  story.rs  user.rs
