[package]
name = "writing_stats_server"
version = "0.1.0"
authors = ["Simon Struck <simon@simonscode.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rusqlite = "0.16"
lettre = "0.9"
lettre_email = "0.9"

[dependencies.rocket_contrib]
default-features = false
features = ["tera_templates"]
